app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  type: NodePort
  selector:
    app: notes
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30008
